k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tasky-app
  labels:
    name: tasky-app
    environment: production
